--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,3 @@
-
 # Use 256-color terminal mode
 set -g default-terminal "screen-256color"
 
@@ -35,25 +34,25 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
-# Status bar appearance
-set -g status-bg black  # Black background
-set -g status-fg grey   # Grey foreground
+# Rosé Pine color scheme
+set -g status-bg "#26233a"  # Dark muted purple (background)
+set -g status-fg "#e0def4"  # Soft white (foreground)
 
-# Left side of the status bar (session name in white)
-set -g status-left "#[fg=white,bg=black]  #S #[default]"
+# Left side of the status bar (session name)
+set -g status-left "#[fg=#9ccfd8,bg=#26233a]  #S #[default]"
 
 # Right side of the status bar (date and time)
-set -g status-right "#[fg=grey,bg=black] %Y-%m-%d %H:%M:%S #[default]"
+set -g status-right "#[fg=#c4a7e7,bg=#26233a] %Y-%m-%d %H:%M:%S #[default]"
 
-# Active window: white on grey
-set-window-option -g window-status-current-format "#[fg=black,bg=grey] #I:#W #[default]"
+# Active window: muted white on lavender
+set-window-option -g window-status-current-format "#[fg=#26233a,bg=#9ccfd8] #I:#W #[default]"
 
-# Inactive windows: grey on black
-set-window-option -g window-status-format "#[fg=grey,bg=black] #I:#W #[default]"
+# Inactive windows: muted purple on background
+set-window-option -g window-status-format "#[fg=#e0def4,bg=#26233a] #I:#W #[default]"
 
-# Pane borders: grey for inactive, white for active
-set -g pane-border-style fg=grey
-set -g pane-active-border-style fg=white
+# Pane borders: light lavender for inactive, soft white for active
+set -g pane-border-style fg=#6e6a86
+set -g pane-active-border-style fg=#e0def4
 
 # Plugin: vim-tmux-navigator (fix Ctrl+j/k navigation)
 set -g @plugin 'christoomey/vim-tmux-navigator'
@@ -67,4 +66,3 @@ set -g @resurrect-capture-pane-content 'on'
 set -g @continuum-restore 'on'
 
 run '~/.tmux/plugins/tpm/tpm'
-
