--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,25 +34,33 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
-# Rosé Pine color scheme
-set -g status-bg "#26233a"  # Dark muted purple (background)
-set -g status-fg "#e0def4"  # Soft white (foreground)
+# Move status bar to the top
+set -g status-position top
+
+# Make the status bar thinner
+set -g status-interval 1
+set -g status-justify centre
+set -g status-height 1
+
+# Status bar colors
+set -g status-bg "#000000"       # Black background for the status bar
+set -g status-fg "#ffffff"       # White foreground for the status bar text
 
 # Left side of the status bar (session name)
-set -g status-left "#[fg=#9ccfd8,bg=#26233a]  #S #[default]"
+set -g status-left "#[fg=#ffffff,bg=#000000]  #S #[default]"
 
 # Right side of the status bar (date and time)
-set -g status-right "#[fg=#c4a7e7,bg=#26233a] %Y-%m-%d %H:%M:%S #[default]"
+set -g status-right "#[fg=#ffffff,bg=#000000] %Y-%m-%d %H:%M:%S #[default]"
 
-# Active window: muted white on lavender
-set-window-option -g window-status-current-format "#[fg=#26233a,bg=#9ccfd8] #I:#W #[default]"
+# Active window: black background, white text
+set-window-option -g window-status-current-format "#[fg=#ffffff,bg=#000000] #I:#W #[default]"
 
-# Inactive windows: muted purple on background
-set-window-option -g window-status-format "#[fg=#e0def4,bg=#26233a] #I:#W #[default]"
+# Inactive windows: black background, grey text
+set-window-option -g window-status-format "#[fg=#808080,bg=#000000] #I:#W #[default]"
 
-# Pane borders: light lavender for inactive, soft white for active
-set -g pane-border-style fg=#6e6a86
-set -g pane-active-border-style fg=#e0def4
+# Remove pane borders
+set -g pane-border-style fg=#000000  # Black to make them invisible
+set -g pane-active-border-style fg=#000000  # Same for active borders
 
 # Plugin: vim-tmux-navigator (fix Ctrl+j/k navigation)
 set -g @plugin 'christoomey/vim-tmux-navigator'
